Fixed Realm problem; Added Timber in the project; WIP Started working with Editor UI;

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">MarxDown</string>
+
+<!--    EditorFragment strings-->
+    <string name="et_input_hint">Start typing here&#8230;</string>
+    <string name="tv_display_hint">Your formatted text will be displayed here!</string>
 </resources>
